Name chunks from headings